--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
         <title>Kyle Reyes</title>
     </head>
     <body>
-        <p>Test</p>
+    <div id="landing-page">
+        <h1 id="title">Kyle<br />Reyes</h1>
+        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%" height="auto">
+    </div>
     </body>
 </html>
