--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Kyle Reyes</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-    <div id="landing-page">
+    <div id="home">
         <h1 id="title">Kyle<br />Reyes</h1>
         <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%" height="auto">
     </div>
