--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     </head>
     <body>
     <div id="home">
-        <h1 id="title">Kyle<br />Reyes</h1>
-        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%" height="auto">
+        <h1 id="title"><u>KYLE REYES</u></h1>
+<!--        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%" height="auto">-->
+    </div>
+    <div id="about">
+        <h2>About Me</h2>
     </div>
     </body>
 </html>
