Added another font, finalized title page

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 </head>
 <body>
 <div id="home">
-    <h1 id="title"><u>KYLE REYES.</u></h1>
+    <h1><u>KYLE REYES.</u></h1>
     <!--        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%" height="auto">-->
 </div>
 <div id="about">
     <h2>About Me</h2>
-    <p>I'm Kyle Reyes, a second-year student studying Mathematics-Computer Science at Brown University. My main interest
-        is software development, but I am also a sabre fencer on Brown's fencing team. When not programming or fencing,
-        I'm usually at a field tossing a frisbee or at a good restaurant pigging out with some friends.</p>
+    <p class="content">I'm Kyle Reyes, a second-year student studying Mathematics-Computer Science at Brown University.
+        My main interest is software development, but I am also a sabre fencer on Brown's fencing team. When not
+        programming or fencing, I'm usually at a field tossing a frisbee or at a good restaurant pigging out with some
+        friends.</p>
 </div>
 </body>
 </html>
