Edited title page

--- a/index.html
+++ b/index.html
@@ -6,16 +6,26 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+<!--<div id="navbar">-->
+<!--    <a>KYLE REYES</a>-->
+<!--    <h1>KYLE REYES</h1>-->
+<!--&lt;!&ndash;            <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%" height="auto">&ndash;&gt;-->
+<!--</div>-->
+
 <div id="home">
-    <h1><u>KYLE REYES.</u></h1>
-    <!--        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%" height="auto">-->
+    <p class="title-page" id="intro">Hi, I'm</p>
+    <h1 class="title-page"><u>KYLE REYES</u></h1>
 </div>
+
 <div id="about">
+    <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%"
+         height="auto" id="portrait">
     <h2>About Me</h2>
-    <p class="content">I'm Kyle Reyes, a second-year student studying Mathematics-Computer Science at Brown University.
-        My main interest is software development, but I am also a sabre fencer on Brown's fencing team. When not
-        programming or fencing, I'm usually at a field tossing a frisbee or at a good restaurant pigging out with some
-        friends.</p>
+    <p class="content">
+        I'm Kyle Reyes. I'm studying Math & Computer Science at
+        Brown University, and I'm interested in software
+        development. Scroll through my website to find out more about me!
+    </p>
 </div>
 </body>
 </html>
