--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Kyle Reyes</title>
     <link href="style.css" rel="stylesheet" type="text/css"/>
+    <script src="https://kit.fontawesome.com/a7195c6079.js"
+            crossorigin="anonymous"></script>
+    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 </head>
 <body>
 <!--<div id="navbar">-->
@@ -15,6 +18,15 @@
 <div id="home">
     <p class="title-page" id="intro">Hi, I'm</p>
     <h1 class="title-page"><u>KYLE REYES</u></h1>
+    <div class="title-page">
+        <a href="mailto:kyle_reyes@brown.edu" target="_blank"
+           rel="noopener noreferrer"><i class="far fa-envelope logos"></i></a>
+        <a href="https://linkedin.com/in/kylewreyes" target="_blank"
+           rel="noopener noreferrer"><i
+                class="fab fa-linkedin logos"></i></a>
+        <a href="https://github.com/kylewreyes" target="_blank"
+           rel="noopener noreferrer"><i class="fab fa-github logos"></i></a>
+    </div>
 </div>
 
 <div id="about">
@@ -22,9 +34,9 @@
          height="auto" id="portrait">
     <h2>About Me</h2>
     <p class="content">
-        I'm Kyle Reyes. I'm studying Math & Computer Science at
-        Brown University, and I'm interested in software
-        development. Scroll through my website to find out more about me!
+        I'm studying Math & Computer Science at Brown University, and I'm
+        interested in software development. Scroll through my website to find
+        out more about me!
     </p>
 </div>
 </body>
