Finalized title page

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 <!--&lt;!&ndash;            <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%" height="auto">&ndash;&gt;-->
 <!--</div>-->
 
-<div id="home">
+<div id="home-bg">
     <p class="title-page" id="intro">Hi, I'm</p>
     <h1 class="title-page"><u>KYLE REYES</u></h1>
-    <div class="title-page">
+    <div id="logo-div" class="title-page">
+        <a href="kyle-reyes-resume.pdf" target="_blank"
+           rel="noopener noreferrer"><i class="far fa-file-pdf logos"></i></a>
         <a href="mailto:kyle_reyes@brown.edu" target="_blank"
            rel="noopener noreferrer"><i class="far fa-envelope logos"></i></a>
         <a href="https://linkedin.com/in/kylewreyes" target="_blank"
@@ -34,9 +36,9 @@
          height="auto" id="portrait">
     <h2>About Me</h2>
     <p class="content">
-        I'm studying Math & Computer Science at Brown University, and I'm
-        interested in software development. Scroll through my website to find
-        out more about me!
+        I'm a student at Brown University concentrating in math & computer
+        science, and I'm primarily interested in software development. Scroll
+        through my website to find out more about me!
     </p>
 </div>
 </body>
