Edits to home page spacing

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
 <div id="about">
     <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%"
          height="auto" id="portrait">
+    <div id="about-text">
+        <p class="content">
+            I'm a student at Brown University concentrating in math & computer
+            science, and I'm primarily interested in software development. I'm
+            also a member of Brown's fencing team. Scroll through my website to
+            find out more about me!
+        </p>
+    </div>
     <h2>About Me</h2>
-    <p class="content">
-        I'm a student at Brown University concentrating in math & computer
-        science, and I'm primarily interested in software development. Scroll
-        through my website to find out more about me!
-    </p>
 </div>
 </body>
 </html>
