--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Kyle Reyes</title>
+    <link rel="icon" href="img/logo-2.png">
     <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+          rel="stylesheet">
     <script src="https://kit.fontawesome.com/a7195c6079.js"
             crossorigin="anonymous"></script>
     <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
@@ -32,17 +36,19 @@
 </div>
 
 <div id="about">
-    <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%"
-         height="auto" id="portrait">
-    <div id="about-text">
+    <div id="about-img" class="column">
+        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" id="portrait">
+    </div>
+    <div id="about-text" class="column">
+        <h2>About Me</h2>
         <p class="content">
             I'm a student at Brown University concentrating in math & computer
-            science, and I'm primarily interested in software development. I'm
-            also a member of Brown's fencing team. Scroll through my website to
-            find out more about me!
+            science, and I'm primarily interested in software development. <br>
+            I'm currently an Undergraduate Teaching Assistant for CSCI 0300 -
+            Fundamentals of Computer Systems and a member of Brown's fencing
+            team. Scroll through my website to find out more about me!
         </p>
     </div>
-    <h2>About Me</h2>
 </div>
 </body>
 </html>
