Testing different font for mobile

--- a/index.html
+++ b/index.html
@@ -36,18 +36,22 @@
 </div>
 
 <div id="about">
-    <div id="about-img" class="column">
-        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" id="portrait">
-    </div>
-    <div id="about-text" class="column">
-        <h2>About Me</h2>
-        <p class="content">
-            I'm a student at Brown University concentrating in math & computer
-            science, and I'm primarily interested in software development. <br>
-            I'm currently an Undergraduate Teaching Assistant for CSCI 0300 -
-            Fundamentals of Computer Systems and a member of Brown's fencing
-            team. Scroll through my website to find out more about me!
-        </p>
+    <h2>About Me</h2>
+    <div id="about-row">
+        <div id="about-img" class="column">
+            <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" id="portrait">
+        </div>
+        <div id="about-text" class="column">
+            <p class="content">
+                I'm a student at Brown University concentrating in math & computer
+                science, and I'm primarily interested in software development.
+            </p>
+            <p class="content">
+                I'm currently an Undergraduate Teaching Assistant for CSCI 0300 -
+                Fundamentals of Computer Systems and a member of Brown's fencing
+                team. Scroll through my website to find out more about me!
+            </p>
+        </div>
     </div>
 </div>
 </body>
