Added viewport setting for mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kyle Reyes</title>
     <link rel="icon" href="img/logo-2.png">
     <link href="style.css" rel="stylesheet" type="text/css"/>
