--- a/index.html
+++ b/index.html
@@ -59,5 +59,11 @@
         </div>
     </div>
 </div>
+
+<div id="experience">
+    <h2>Experience</h2>
+<!--    <h3>Software Engineering</h3>-->
+<!--    <h3>Teaching</h3>-->
+</div>
 </body>
 </html>
