Fluid typography, fixed iPhone landscape, but unfinished image

--- a/index.html
+++ b/index.html
@@ -12,16 +12,9 @@
           rel="stylesheet">
     <script src="https://kit.fontawesome.com/a7195c6079.js"
             crossorigin="anonymous"></script>
-    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 </head>
 <body>
-<!--<div id="navbar">-->
-<!--    <a>KYLE REYES</a>-->
-<!--    <h1>KYLE REYES</h1>-->
-<!--&lt;!&ndash;            <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" width="25%" height="auto">&ndash;&gt;-->
-<!--</div>-->
-
-<div id="home-bg">
+<div id="home-bg" class="section-container">
     <p class="title-page" id="intro">Hi, I'm</p>
     <h1 class="title-page"><u>KYLE REYES</u></h1>
     <div id="logo-div" class="title-page">
@@ -37,13 +30,15 @@
     </div>
 </div>
 
-<div id="about">
+<div id="about" class="section-container">
     <h2>About Me</h2>
     <div id="about-row">
-        <div id="about-img" class="column">
-            <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes"
-                 id="portrait">
-        </div>
+        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" class="column"
+             id="portrait">
+<!--        <div id="about-img" class="column">-->
+<!--            <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes"-->
+<!--                 id="portrait">-->
+<!--        </div>-->
         <div id="about-text" class="column">
             <p class="content">
                 I'm a student at Brown University concentrating in math &
@@ -52,15 +47,15 @@
             </p>
             <p class="content">
                 I'm currently an Undergraduate Teaching Assistant for CSCI 0300
-                -
-                Fundamentals of Computer Systems and a member of Brown's fencing
-                team. Scroll through my website to find out more about me!
+                - Fundamentals of Computer Systems and a member of Brown's
+                fencing team. Scroll through my website to find out more about
+                me!
             </p>
         </div>
     </div>
 </div>
 
-<div id="experience">
+<div id="experience" class="section-container">
     <h2>Experience</h2>
 <!--    <h3>Software Engineering</h3>-->
 <!--    <h3>Teaching</h3>-->
