Changed resume logo; finished about me; started education

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="title-page"><u>KYLE REYES</u></h1>
     <div id="logo-div" class="title-page">
         <a href="kyle-reyes-resume.pdf" target="_blank"
-           rel="noopener noreferrer"><i class="far fa-file-pdf logos"></i></a>
+           rel="noopener noreferrer"><i class="far fa-file-alt logos"></i></a>
         <a href="mailto:kyle_reyes@brown.edu" target="_blank"
            rel="noopener noreferrer"><i class="far fa-envelope logos"></i></a>
         <a href="https://linkedin.com/in/kylewreyes" target="_blank"
@@ -30,20 +30,20 @@
     </div>
 </div>
 
-<div id="about" class="section-container">
+<div id="about" class="section-container non-title-container">
     <h2>About Me</h2>
-    <div id="about-row">
-        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes" class="column"
-             id="portrait">
-<!--        <div id="about-img" class="column">-->
-<!--            <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes"-->
-<!--                 id="portrait">-->
-<!--        </div>-->
-        <div id="about-text" class="column">
+    <div id="about-grid">
+<!--        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes"-->
+<!--             id="portrait">-->
+        <div id="about-img">
+            <img src="img/portrait.jpg" alt="Self-Portrait"
+                 id="portrait">
+        </div>
+        <div id="about-text">
             <p class="content">
                 I'm a student at Brown University concentrating in math &
-                computer
-                science, and I'm primarily interested in software development.
+                computer science, and I'm primarily interested in software
+                development.
             </p>
             <p class="content">
                 I'm currently an Undergraduate Teaching Assistant for CSCI 0300
@@ -55,10 +55,23 @@
     </div>
 </div>
 
-<div id="experience" class="section-container">
+<div id="education" class="section-container non-title-container">
+    <h2>Education</h2>
+    <div id="courses">
+        <div id="math-courses">
+
+        </div>
+        <div id="cs=courses">
+
+        </div>
+    </div>
+</div>
+
+<div id="experience" class="section-container non-title-container">
     <h2>Experience</h2>
 <!--    <h3>Software Engineering</h3>-->
 <!--    <h3>Teaching</h3>-->
 </div>
+
 </body>
 </html>
