Added education section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://kit.fontawesome.com/a7195c6079.js"
             crossorigin="anonymous"></script>
 </head>
+
 <body>
 <div id="home-bg" class="section-container">
     <p class="title-page" id="intro">Hi, I'm</p>
@@ -33,17 +34,15 @@
 <div id="about" class="section-container non-title-container">
     <h2>About Me</h2>
     <div id="about-grid">
-<!--        <img src="img/portrait.jpg" alt="Portrait of Kyle Reyes"-->
-<!--             id="portrait">-->
         <div id="about-img">
             <img src="img/portrait.jpg" alt="Self-Portrait"
                  id="portrait">
         </div>
         <div id="about-text">
             <p class="content">
-                I'm a student at Brown University concentrating in math &
-                computer science, and I'm primarily interested in software
-                development.
+                I'm a student at <b>Brown University</b> concentrating in
+                <b>math & computer science</b>, and I'm primarily interested in
+                software development.
             </p>
             <p class="content">
                 I'm currently an Undergraduate Teaching Assistant for CSCI 0300
@@ -58,19 +57,66 @@
 <div id="education" class="section-container non-title-container">
     <h2>Education</h2>
     <div id="courses">
-        <div id="math-courses">
-
+        <div id="math-courses" class="course-container">
+            <p class="course-title"><b>Math courses</b></p>
+            <ul>
+                <li>Abstract Algebra</li>
+                <li>
+                    <a href="https://drive.google.com/file/d/1N_QVlHcnGvBbe4VmpYEil_TrJz-i19pB/view"
+                       target="_blank" rel="noopener noreferrer">
+                        Analysis: Functions of One Variable
+                    </a></li>
+                <li>Applied Ordinary Differential Equations (APMA 0350)</li>
+                <li>Complex Analysis</li>
+                <li>
+                    <a href="http://www.math.brown.edu/johsilve/MA0054/MA0054HomePage.html"
+                       target="_blank" rel="noopener noreferrer">
+                        Honors Linear Algebra
+                    </a></li>
+                <li><a href="http://www.math.brown.edu/dabramov/MA/f1920/35/"
+                       target="_blank" rel="noopener noreferrer">
+                    Honors (Multivariable) Calculus
+                </a></li>
+                <li><a href="https://cs.brown.edu/courses/csci0220/"
+                       target="_blank" rel="noopener noreferrer">
+                    Intro to Discrete Structures and Probability
+                </a></li>
+                <li>Statistical Inference I (APMA 1655)</li>
+            </ul>
         </div>
-        <div id="cs=courses">
-
+        <div id="cs-courses" class="course-container">
+            <p class="course-title"><b>Computer Science courses</b></p>
+            <ul>
+                <li><a href="https://cs.brown.edu/courses/cs019/2019/"
+                       target="_blank" rel="noopener noreferrer">
+                    Accelerated Intro to Computer Science
+                </a></li>
+                <li>
+                    <a href="https://brown-deep-learning.github.io/dl-website-2020/"
+                       target="_blank" rel="noopener noreferrer">
+                        Deep Learning
+                    </a></li>
+                <li><a href="https://brown-cs0330.github.io/website/index.html"
+                       target="_blank" rel="noopener noreferrer">
+                    Intro to Computer Systems
+                </a></li>
+                <li><a href="http://cs.brown.edu/courses/cs166/"
+                       target="_blank" rel="noopener noreferrer">
+                    Intro to Computer Systems Security
+                </a></li>
+                <li><a href="http://cs.brown.edu/courses/cs0320/"
+                       target="_blank" rel="noopener noreferrer">
+                    Intro to Software Engineering
+                </a></li>
+            </ul>
         </div>
     </div>
 </div>
 
 <div id="experience" class="section-container non-title-container">
     <h2>Experience</h2>
-<!--    <h3>Software Engineering</h3>-->
-<!--    <h3>Teaching</h3>-->
+    <!--    <h3>Software Engineering</h3>-->
+    <!--    <h3>Teaching</h3>-->
 </div>
 
 </body>
