--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                        target="_blank" rel="noopener noreferrer">
                         Analysis: Functions of One Variable
                     </a></li>
-                <li>Applied Ordinary Differential Equations (APMA 0350)</li>
                 <li>Complex Analysis</li>
                 <li>
                     <a href="http://www.math.brown.edu/johsilve/MA0054/MA0054HomePage.html"
@@ -91,6 +90,11 @@
                        target="_blank" rel="noopener noreferrer">
                     Accelerated Intro to Computer Science
                 </a></li>
+                <li>
+                    <a href="http://cs.brown.edu/courses/csci1260/spring-2021/"
+                       target="_blank" rel="noopener noreferrer">
+                        Compilers and Program Analysis
+                    </a></li>
                 <li>
                     <a href="https://brown-deep-learning.github.io/dl-website-2020/"
                        target="_blank" rel="noopener noreferrer">
