--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
                 software development.
             </p>
             <p class="content">
-                I'm currently an Undergraduate Teaching Assistant for CSCI 0300
-                - Fundamentals of Computer Systems and a member of Brown's
-                fencing team. Scroll through my website to find out more about
+                I'm currently an Undergraduate Teaching Assistant for 
+                <a href="http://cs300.systems" target="_blank" rel="noopener 
+                noreferrer"> Fundamentals of Computer Systems
+                </a> and a member of Brown's fencing team. This summer, I will be working at Amazon as a <a href="https://www.amazonuniversity.jobs/jobdescription?jobid=1278532" target="_blank" rel="noopener 
+                noreferrer">Software Development Engineer Intern</a>. Scroll through my website to find out more about
                 me!
             </p>
         </div>
