Edited colors; finished experience section

--- a/index.html
+++ b/index.html
@@ -1,129 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Kyle Reyes</title>
     <link rel="icon" href="img/logo-2.png">
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-          rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a7195c6079.js"
-            crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a7195c6079.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<div id="home-bg" class="section-container">
-    <p class="title-page" id="intro">Hi, I'm</p>
-    <h1 class="title-page"><u>KYLE REYES</u></h1>
-    <div id="logo-div" class="title-page">
-        <a href="kyle-reyes-resume.pdf" target="_blank"
-           rel="noopener noreferrer"><i class="far fa-file-alt logos"></i></a>
-        <a href="mailto:kyle_reyes@brown.edu" target="_blank"
-           rel="noopener noreferrer"><i class="far fa-envelope logos"></i></a>
-        <a href="https://linkedin.com/in/kylewreyes" target="_blank"
-           rel="noopener noreferrer"><i
-                class="fab fa-linkedin logos"></i></a>
-        <a href="https://github.com/kylewreyes" target="_blank"
-           rel="noopener noreferrer"><i class="fab fa-github logos"></i></a>
-    </div>
-</div>
-
-<div id="about" class="section-container non-title-container">
-    <h2>About Me</h2>
-    <div id="about-grid">
-        <div id="about-img">
-            <img src="img/portrait.jpg" alt="Self-Portrait"
-                 id="portrait">
-        </div>
-        <div id="about-text">
-            <p class="content">
-                I'm a student at <b>Brown University</b> concentrating in
-                <b>math & computer science</b>, and I'm primarily interested in
-                software development.
-            </p>
-            <p class="content">
-                I'm currently an Undergraduate Teaching Assistant for 
-                <a href="http://cs300.systems" target="_blank" rel="noopener 
-                noreferrer"> Fundamentals of Computer Systems
-                </a> and a member of Brown's fencing team. This summer, I will be working at Amazon as a <a href="https://www.amazonuniversity.jobs/jobdescription?jobid=1278532" target="_blank" rel="noopener 
-                noreferrer">Software Development Engineer Intern</a>. Scroll through my website to find out more about
-                me!
-            </p>
+    <div id="home-bg" class="section-container">
+        <p class="title-page" id="intro">Hi, I'm</p>
+        <h1 class="title-page"><u>KYLE REYES</u></h1>
+        <div id="logo-div" class="title-page">
+            <a href="kyle-reyes-resume.pdf" target="_blank" rel="noopener noreferrer"><i
+                    class="far fa-file-alt logos"></i></a>
+            <a href="mailto:kyle_reyes@brown.edu" target="_blank" rel="noopener noreferrer"><i
+                    class="far fa-envelope logos"></i></a>
+            <a href="https://linkedin.com/in/kylewreyes" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-linkedin logos"></i></a>
+            <a href="https://github.com/kylewreyes" target="_blank" rel="noopener noreferrer"><i
+                    class="fab fa-github logos"></i></a>
         </div>
     </div>
-</div>
 
-<div id="education" class="section-container non-title-container">
-    <h2>Education</h2>
-    <div id="courses">
-        <div id="math-courses" class="course-container">
-            <p class="course-title"><b>Math courses</b></p>
+    <div id="about" class="section-container non-title-container">
+        <h2 id="about-title">About Me</h2>
+        <div id="about-grid">
+            <div id="about-img">
+                <img src="img/portrait.jpg" alt="Self-Portrait" id="portrait">
+            </div>
+            <div id="about-text">
+                <p class="content">
+                    I'm a student at <b>Brown University</b> concentrating in
+                    <b>Mathematics-Computer Science</b>, and I'm primarily interested in software development.
+                </p>
+                <p class="content">
+                    I've worked as an <b>Undergraduate Teaching Assistant</b> for two CS courses, and I'm also a member
+                    of
+                    Brown's fencing team. This summer, I'm working at <b>Amazon</b> as a <b>Software Development
+                        Engineer Intern</b>. Scroll through my website to find out more about
+                    me!
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div id="education" class="section-container non-title-container">
+        <h2 id="education-title">Coursework</h2>
+        <div id="courses">
+            <div id="math-courses" class="course-container">
+                <p class="course-title"><b>Math courses</b></p>
+                <ul>
+                    <li>Abstract Algebra</li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/1N_QVlHcnGvBbe4VmpYEil_TrJz-i19pB/view" target="_blank"
+                            rel="noopener noreferrer">
+                            Analysis: Functions of One Variable
+                        </a>
+                    </li>
+                    <li>Complex Analysis</li>
+                    <li>
+                        <a href="http://www.math.brown.edu/johsilve/MA0054/MA0054HomePage.html" target="_blank"
+                            rel="noopener noreferrer">
+                            Honors Linear Algebra
+                        </a>
+                    </li>
+                    <li><a href="http://www.math.brown.edu/dabramov/MA/f1920/35/" target="_blank"
+                            rel="noopener noreferrer">
+                            Honors (Multivariable) Calculus
+                        </a></li>
+                    <li><a href="https://cs.brown.edu/courses/csci0220/" target="_blank" rel="noopener noreferrer">
+                            Intro to Discrete Structures and Probability
+                        </a></li>
+                    <li>Statistical Inference I (APMA 1655)</li>
+                </ul>
+            </div>
+            <div id="cs-courses" class="course-container">
+                <p class="course-title"><b>Computer Science courses</b></p>
+                <ul>
+                    <li><a href="https://cs.brown.edu/courses/cs019/2019/" target="_blank" rel="noopener noreferrer">
+                            Accelerated Intro to Computer Science
+                        </a></li>
+                    <li>
+                        <a href="http://cs.brown.edu/courses/csci1260/spring-2021/" target="_blank"
+                            rel="noopener noreferrer">
+                            Compilers and Program Analysis
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://brown-deep-learning.github.io/dl-website-2020/" target="_blank"
+                            rel="noopener noreferrer">
+                            Deep Learning
+                        </a>
+                    </li>
+                    <li><a href="https://brown-cs0330.github.io/website/index.html" target="_blank"
+                            rel="noopener noreferrer">
+                            Intro to Computer Systems
+                        </a></li>
+                    <li><a href="http://cs.brown.edu/courses/cs166/" target="_blank" rel="noopener noreferrer">
+                            Intro to Computer Systems Security
+                        </a></li>
+                    <li><a href="http://cs.brown.edu/courses/cs0320/" target="_blank" rel="noopener noreferrer">
+                            Intro to Software Engineering
+                        </a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div id="experience" class="section-container non-title-container">
+        <h2 id="experience-title">Experience</h2>
+        <div class="experience-box">
+            <div class="experience-tab">
+                <div>
+                    <b><a href="https://amazon.com" target="_blank" rel="noopener noreferrer">Amazon</a></b>
+                </div>
+                <div class="experience-right">Seattle, WA (Remote)</div>
+                <div>Software Development Engineer Intern</div>
+                <div class="experience-right">May - Aug 2021</div>
+            </div>
             <ul>
-                <li>Abstract Algebra</li>
-                <li>
-                    <a href="https://drive.google.com/file/d/1N_QVlHcnGvBbe4VmpYEil_TrJz-i19pB/view"
-                       target="_blank" rel="noopener noreferrer">
-                        Analysis: Functions of One Variable
-                    </a></li>
-                <li>Complex Analysis</li>
-                <li>
-                    <a href="http://www.math.brown.edu/johsilve/MA0054/MA0054HomePage.html"
-                       target="_blank" rel="noopener noreferrer">
-                        Honors Linear Algebra
-                    </a></li>
-                <li><a href="http://www.math.brown.edu/dabramov/MA/f1920/35/"
-                       target="_blank" rel="noopener noreferrer">
-                    Honors (Multivariable) Calculus
-                </a></li>
-                <li><a href="https://cs.brown.edu/courses/csci0220/"
-                       target="_blank" rel="noopener noreferrer">
-                    Intro to Discrete Structures and Probability
-                </a></li>
-                <li>Statistical Inference I (APMA 1655)</li>
+                <li>Incoming intern in the Consumer organization</li>
             </ul>
         </div>
-        <div id="cs-courses" class="course-container">
-            <p class="course-title"><b>Computer Science courses</b></p>
+        <div class="experience-box">
+            <div class="experience-tab">
+                <div>
+                    <b><a href="https://cs.brown.edu/courses/ta/" target="_blank" rel="noopener noreferrer">Brown
+                            University</a></b>
+                </div>
+                <div class="experience-right">Providence, RI (Remote)</div>
+                <div>Undergraduate Teaching Assistant</div>
+                <div class="experience-right">Aug 2020 - Apr 2021</div>
+            </div>
             <ul>
-                <li><a href="https://cs.brown.edu/courses/cs019/2019/"
-                       target="_blank" rel="noopener noreferrer">
-                    Accelerated Intro to Computer Science
-                </a></li>
-                <li>
-                    <a href="http://cs.brown.edu/courses/csci1260/spring-2021/"
-                       target="_blank" rel="noopener noreferrer">
-                        Compilers and Program Analysis
-                    </a></li>
-                <li>
-                    <a href="https://brown-deep-learning.github.io/dl-website-2020/"
-                       target="_blank" rel="noopener noreferrer">
-                        Deep Learning
-                    </a></li>
-                <li><a href="https://brown-cs0330.github.io/website/index.html"
-                       target="_blank" rel="noopener noreferrer">
-                    Intro to Computer Systems
-                </a></li>
-                <li><a href="http://cs.brown.edu/courses/cs166/"
-                       target="_blank" rel="noopener noreferrer">
-                    Intro to Computer Systems Security
-                </a></li>
-                <li><a href="http://cs.brown.edu/courses/cs0320/"
-                       target="_blank" rel="noopener noreferrer">
-                    Intro to Software Engineering
-                </a></li>
+                <li>Hosted weekly TA hours & lab sessions, answered student’s questions online, and provided
+                    feedback during grading</li>
+                <li><a href="http://cs.brown.edu/courses/csci0300/2021/" target="_blank" rel="noopener noreferrer">CSCI
+                        0300 - Fundamentals of Computer Systems (Spring 2021)</a></li>
+                <ul>
+                    <li>Taught in <b>C, C++, x86-64</b></li>
+                    <li>Created new projects and modified and tested existing projects for the 2nd offering of the
+                        course</li>
+                </ul>
+                <li><a href="https://cs.brown.edu/courses/cs019/2020/" target="_blank" rel="noopener noreferrer">CSCI
+                        0190 - Accelerated Intro to Computer Science (Fall 2020)</a></li>
+                <ul>
+                    <li>Taught in <a href="https://code.pyret.org/" target="_blank" rel="noopener noreferrer"><b>Pyret</b></a>
+                    </li>
+                </ul>
+            </ul>
+        </div>
+        <div class="experience-box">
+            <div class="experience-tab">
+                <div>
+                    <b><a href="https://soh.am/" target="_blank" rel="noopener noreferrer">Soham Sankaran</a></b>
+                </div>
+
+                <div class="experience-right">Remote</div>
+                <div>Software Engineer Intern</div>
+                <div class="experience-right">Jun - Aug 2021</div>
+            </div>
+            <ul>
+                <li>Built <a href="http://moodplex.com/" target="_blank" rel="noopener noreferrer">Moodplex</a>, a web
+                    app that produces social media post rankings based on comparisons made by its
+                    users, along with two other interns under Mr. Sankaran’s supervision</li>
+                <li>Acquired trending posts from Twitter, Reddit, YouTube, Imgur, and Hacker News APIs using <b>Go</b> that was
+                    then stored in a <b>PostgreSQL</b> database</li>
+                <li>Managed frontend using <b>HTML, CSS, and JavaScript</b></li>
             </ul>
         </div>
     </div>
-</div>
 
-<div id="experience" class="section-container non-title-container">
-    <h2>Experience</h2>
-    <!--    <h3>Software Engineering</h3>-->
-    <!--    <h3>Teaching</h3>-->
-</div>
+    <div id="projects" class="section-container non-title-container">
+        <h2 id="projects-title">Projects</h2>
+        <div class="experience-box">
+            <div class="projects-tab">
+                <b><a class="experience-link" href="https://amazon.com" target="_blank"
+                        rel="noopener noreferrer">Amazon</a></b> <span class="experience-right">Seattle, WA
+                    (Remote)</span> <br>
+                Software Development Engineer Intern <span class="experience-right">May - Aug 2021</span>
+            </div>
+            <ul>
+                <li>Incoming intern in the Consumer organization</li>
+            </ul>
+        </div>
+        <div class="experience-box">
+            <div class="experience-tab">
+                <b><a class="experience-link" href="https://cs.brown.edu/courses/ta/" target="_blank"
+                        rel="noopener noreferrer">Brown University</a></b> <span class="experience-right">Providence, RI
+                    (Remote)</span> <br>
+                Undergraduate Teaching Assistant <span class="experience-right">Aug 2020 - Apr 2021</span>
+            </div>
+            <ul>
+                <li>CSCI 0300 - Fundamentals of Computer Systems (Spring 2021)</li>
+                <ul>
+                    <li>Taught in C, C++, x86-64</li>
+                </ul>
+                <li>CSCI 0190 - Accelerated Intro to Computer Science (Fall 2020)</li>
+                <ul>
+                    <li>Taught in Pyret</li>
+                </ul>
+            </ul>
+        </div>
+        <div class="experience-box">
+            <div class="projects-tab">
+                <b>Soham Sankaran</b>
+                <span class="experience-right">Remote</span>
+                Software Engineer Intern
+                <span class="experience-right">Jun - Aug 2021</span>
+            </div>
+            <ul>
+                <li>Incoming Software Development Engineer Intern at Amazon</li>
+            </ul>
+        </div>
+    </div>
 
 </body>
+
 </html>
