Finished projects section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                 <li><a href="https://cs.brown.edu/courses/cs019/2020/" target="_blank" rel="noopener noreferrer">CSCI
                         0190 - Accelerated Intro to Computer Science (Fall 2020)</a></li>
                 <ul>
-                    <li>Taught in <a href="https://code.pyret.org/" target="_blank" rel="noopener noreferrer"><b>Pyret</b></a>
+                    <li>Taught in <a href="https://code.pyret.org/" target="_blank"
+                            rel="noopener noreferrer"><b>Pyret</b></a>
                     </li>
                 </ul>
             </ul>
@@ -170,7 +171,8 @@
                 <li>Built <a href="http://moodplex.com/" target="_blank" rel="noopener noreferrer">Moodplex</a>, a web
                     app that produces social media post rankings based on comparisons made by its
                     users, along with two other interns under Mr. Sankaran’s supervision</li>
-                <li>Acquired trending posts from Twitter, Reddit, YouTube, Imgur, and Hacker News APIs using <b>Go</b> that was
+                <li>Acquired trending posts from Twitter, Reddit, YouTube, Imgur, and Hacker News APIs using <b>Go</b>
+                    that was
                     then stored in a <b>PostgreSQL</b> database</li>
                 <li>Managed frontend using <b>HTML, CSS, and JavaScript</b></li>
             </ul>
@@ -181,42 +183,46 @@
         <h2 id="projects-title">Projects</h2>
         <div class="experience-box">
             <div class="projects-tab">
-                <b><a class="experience-link" href="https://amazon.com" target="_blank"
-                        rel="noopener noreferrer">Amazon</a></b> <span class="experience-right">Seattle, WA
-                    (Remote)</span> <br>
-                Software Development Engineer Intern <span class="experience-right">May - Aug 2021</span>
+                <b>Hi, My Name is ...</b> (<a href="https://github.com/QiuhongAnnaWei/HiMyNameIs" target="_blank"
+                    rel="noopener noreferrer">GitHub</a>)
             </div>
             <ul>
-                <li>Incoming intern in the Consumer organization</li>
-            </ul>
-        </div>
-        <div class="experience-box">
-            <div class="experience-tab">
-                <b><a class="experience-link" href="https://cs.brown.edu/courses/ta/" target="_blank"
-                        rel="noopener noreferrer">Brown University</a></b> <span class="experience-right">Providence, RI
-                    (Remote)</span> <br>
-                Undergraduate Teaching Assistant <span class="experience-right">Aug 2020 - Apr 2021</span>
-            </div>
-            <ul>
-                <li>CSCI 0300 - Fundamentals of Computer Systems (Spring 2021)</li>
-                <ul>
-                    <li>Taught in C, C++, x86-64</li>
-                </ul>
-                <li>CSCI 0190 - Accelerated Intro to Computer Science (Fall 2020)</li>
-                <ul>
-                    <li>Taught in Pyret</li>
-                </ul>
+                <li>Created a unique name generator using an RNN in a group of four for <a
+                        href="https://2021.hackatbrown.org/" target="_blank" rel="noopener noreferrer">Hack@Brown
+                        2021</a></li>
+                <li>Generated names based on a given prefix, creativity level, and a similar sounding name</li>
+                <li>Used <b>HTML, CSS, JavaScript, Python, Flask</b></li>
             </ul>
         </div>
         <div class="experience-box">
             <div class="projects-tab">
-                <b>Soham Sankaran</b>
-                <span class="experience-right">Remote</span>
-                Software Engineer Intern
-                <span class="experience-right">Jun - Aug 2021</span>
+                <b>DeepKart64</b> (<a href="https://github.com/n-young/deepkart64" target="_blank"
+                    rel="noopener noreferrer">GitHub</a>)
             </div>
             <ul>
-                <li>Incoming Software Development Engineer Intern at Amazon</li>
+                <li>Created a deep reinforcement learning agent that plays Mario Kart 64 in a group of four for Deep
+                    Learning final project
+                </li>
+                <li>Built TensorFlow model using convolution, A2C method, and preexisting OpenAI gym wrapper</li>
+                <li>Used <b>Docker, TensorFlow, Google Cloud Platform</b></li>
+            </ul>
+        </div>
+        <div class="experience-box">
+            <div class="projects-tab">
+                <b><a href="https://parseltongue-cs32.herokuapp.com/" target="_blank"
+                        rel="noopener noreferrer">ParselTongue</a></b>
+                (<a href="https://github.com/kylewreyes/parseltongue" target="_blank"
+                    rel="noopener noreferrer">GitHub</a>)
+            </div>
+            <ul>
+                <li>Built a smart PageRank-based research paper parsing tool for Intro to Software Engineering final
+                    group project
+                </li>
+                <li>Given a few keywords, finds relevant paragraphs across multiple research papers (and their
+                    respective locations)</li>
+                <li>Developed heuristics to filter through parsed text using <b>Java</b></li>
+                <li>Used Apache PDFBox to acquire text from the PDFs, <b>MongoDB</b> for the database, and Spark and
+                    Freemarker for the frontend and webserver</li>
             </ul>
         </div>
     </div>
